--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,4 +4,7 @@
     tools:context="com.example.dell.myapplication.MainActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_websearch"
+        app:showAsAction="withText|ifRoom"
+        android:title="Search" />
 </menu>
