--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,5 +6,6 @@
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/action_websearch"
         app:showAsAction="withText|ifRoom"
-        android:title="Search" />
+        android:title="Search"
+        android:icon="@drawable/common_signin_btn_icon_light"/>
 </menu>
