--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,4 +32,8 @@
         <item name="android:gravity">center_vertical</item>
     </style>
 
+    <style name="AnimationPreview">
+        <item name="android:windowEnterAnimation">@anim/my_scale_action</item>
+        <item name="android:windowExitAnimation">@anim/my_alpha_action</item>
+    </style>
 </resources>
